--- a/Assets/Index.html
+++ b/Assets/Index.html
@@ -115,9 +115,9 @@
                     <h3>Sobre o projeto</h3>
                     <h4>Projeto realizado se tratando de um rebranding de marca, uma
                         proposta clara do que o cliente queria para o ano de 2024, com
-                        novascores,umanovatipografia,umprocessopeloqualaempresa
+                        novascores,uma nova tipografia,um processo pelo qual a empresa
                         passou para fazer ajustes, sensíveis, na maneira como se colocam
-                        aopúblicoeaomercado.</h4>
+                        ao público e ao mercado.</h4>
                 </div>
             </div>
         </section>
